Quick fix for overflow

--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+body {
+    height: 100%;
+    overflow: hidden;
+    width: 100%:
+}
+
 .bg-img {
     height: auto;
     left: 0;
